# Dual-AI-Assistant-s-Benchmark

./: .env.example  .gitignore  Makefile  PRD_AI_Assistant_Benchmark.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/frontier-assistant/: app.py  assistant.py  requirements.txt
apps/oss-assistant/: README.md  app.py  assistant.py  requirements.txt
core/: __init__.py
core/guardrails/: input_guard.py  output_guard.py  patterns.py  toxicity.py
core/memory/: token_budget.py
core/observability/: cost.py  langfuse_tracer.py  logger.py  metrics.py
core/tools/: __init__.py  calculator.py  datetime_tool.py  registry.py  web_search.py
docker/: frontier.Dockerfile  oss.Dockerfile
eval/: analyze.py  assistants.py  judge.py  judge_panel.py  rebuild_results.py  run_eval.py  run_eval_multiturn.py  selfcheck.py  visualize.py
eval/benchmarks/: __init__.py  bold.py  jailbreak_bench.py  loader.py  real_toxicity.py  toxigen.py  truthful_qa.py
eval/prompts/: BENCHMARK_SOURCES.md  adversarial.json  bias.json  factual.json
report/: AI_Personal_Assistant_Benchmark_Report.docx  ONE_PAGE_EVAL_SUMMARY.md  generate_pdf.py
scripts/: deploy_hf_spaces.sh  deploy_oss_space.py  generate_eval_docx.py  run_local.sh  space_logs.py  verify_live_space.py  wait_space_running.py
tests/: test_eval_benchmarks.py  test_guardrails.py  test_judge_panel_and_cost.py  test_memory.py  test_observability_and_web_search.py  test_oss_app.py  test_report_generators.py  test_tools.py
