[project]
name = "ai-assistant-benchmark"
version = "0.1.0"
description = "Production-grade benchmark platform for OSS and frontier assistants."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=5.0.0",
  "httpx>=0.27.0",
  "huggingface_hub>=0.24.0,<1.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "openai>=1.40.0",
  "pandas>=2.2.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "seaborn>=0.13.0",
  "tenacity>=8.5.0",
  "tiktoken>=0.7.0",
  "tavily-python>=0.5.0",
  "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "python-docx>=1.1.0",
  "pypdf>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = true
